syntax = "proto3";

option csharp_namespace = "Pricer.Web.Shared.Grpc";

package Authentication;

service Authentication {
  rpc Authenticate(AuthenticationRequest) returns (AuthenticationReply);
}

message AuthenticationRequest {
   string token = 1;
}

message AuthenticationReply {
  string accessToken = 1;
  bool isSuccess = 2;
}